# safedelegate-trace-api

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  railway.json  requirements.txt
app/: __init__.py  config.py  main.py
app/db/: __init__.py  base.py  models.py
app/demo/: __init__.py  seed.py
app/domain/: __init__.py  hashing.py  lifecycle.py  scenarios.py  timeutil.py
app/domain/adapters/: __init__.py  registry.py
app/domain/gateway/: __init__.py  gateway.py
app/domain/orchestrator/: __init__.py  planner.py
app/domain/policy/: __init__.py  context.py  engine.py  risk.py  (+1 more)
app/routers/: __init__.py  delegations.py  deps.py  evidence.py  lifecycle.py  operator.py  security.py  system.py
app/schemas/: __init__.py  common.py  delegation.py  evaluation.py  plan.py  receipt.py  registry.py  security.py  trace.py
app/security/: __init__.py  detectors.py
benchmark/: __init__.py  cases.py  runner.py
benchmark/results/: results.json  results.md
fixtures/: agents.json  loan_profiles.json  policies.json  users.json
fixtures/receipts/: quarantined.json  success.json
fixtures/scenarios/: 01_rate_reduction_success.json  02_indirect_prompt_injection.json  03_scope_exceeded_transfer.json  04_approval_replay.json
schemas/: action-receipt.schema.json  agent-registry.schema.json  delegation-policy.schema.json  msts-lite.schema.json  openapi.yaml  policy-evaluation.schema.json
tests/: conftest.py  test_benchmark.py  test_hashing.py  test_hero_flow.py  test_policy.py  test_schema_conformance.py  test_security_lab.py  test_system.py
(+4 files in other folders)
